--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
     <script defer type="module" src="index.js"></script>
     <style>
         body {
-            background-color: #888;
+            /* background-color: #888; */
         }
 
         #canvas {
-            background-color: black;
+            /* background-color: black; */
+            border: 1px solid red;
         }
     </style>
 </head>
