--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         }
 
         #canvas {
-            /* background-color: black; */
+            background-color: black;
             border: 1px solid red;
         }
     </style>
